# Self_Study

Docker/Docker Trial/: Dockerfile
Linear Algebra/Udacity Refresher/: a.out  line.cpp  vector.cpp  vector.h
NumPy_100/First_Try_Jan_2023/: problems_0_10.ipynb  problems_11_20.ipynb  problems_21_30.ipynb  problems_31_40.ipynb  problems_41_50.ipynb  problems_51_60.ipynb  problems_61_70.ipynb  problems_71_80.ipynb
NumPy_100/Second_Try_Apr_2023/: problems_11_20.ipynb  problems_1_10.ipynb  problems_21_30.ipynb  problems_31_40.ipynb  problems_41_50.ipynb  problems_51_60.ipynb  problems_61_70.ipynb  problems_71_80.ipynb  problems_81_90.ipynb  problems_91_100.ipynb
Pandas_100/First_Try_Apr_2023/: problems_1_10.ipynb
React/apple-game/: package-lock.json  package.json
React/apple-game/src/: App.css  App.js
React/demo-app-for-Lean-Franzl/: package-lock.json  package.json
React/demo-app-for-Lean-Franzl/src/: App.js
React/demo-app-for-Lean-Franzl/src/data/: username.csv
React/tictactoe/: index.js
React/unity-player-demo/: package-lock.json  package.json
React/unity-player-demo/src/: App.js  UnityView.js
Rust/: primitives.rs
SQL/: Databases.txt  Sql_advanced.txt
pyenv-poetry-example/: pyproject.toml
pyenv-poetry-example/tests/: test_example.py
